# StatPhys

helper_scripts/: energy.py  gr.py  showPlots.py
input_files/ex1/: coords.inp  params.inp
input_files/ex2/: coords.inp  params.inp
input_files/ex3/: params.inp
input_files/ex4/: params.inp
input_files/ex5/: params.inp
input_files/ex6/: params.inp
input_files/ourProject/: params.inp
source_code/: CMakeLists.txt  auswertung.py  main.cpp  questions.txt  references.txt  toDo.txt
source_code/lib/: AnglePotential.cpp  AnglePotential.h  AveragedRadialDistribution.cpp  AveragedRadialDistribution.h  BinaryIO.cpp  BinaryIO.h  CenterOfMassCalculator.cpp  CenterOfMassCalculator.h  CoordinatesAndVelocitiesInitializer.cpp  CoordinatesAndVelocitiesInitializer.h  CoulombPotential.cpp  CoulombPotential.h  CovalentPotential.cpp  CovalentPotential.h  Element.cpp  Element.h  HarmonicPotential.cpp  HarmonicPotential.h  InstantaneousRadialDistribution.cpp  InstantaneousRadialDistribution.h  InteractionCalculator.cpp  InteractionCalculator.h  LJPotential.cpp  LJPotential.h  MDParameters.cpp  MDParameters.h  MDRun.cpp  MDRun.h  MDRunOutput.cpp  MDRunOutput.h  MDSimulation.cpp  MDSimulation.h  Molecule.cpp  Molecule.h  MorsePotential.cpp  MorsePotential.h  ParameterIO.cpp  ParameterIO.h  ParameterValidityChecker.cpp  ParameterValidityChecker.h  (+19 more)
